[tool.black]
line-length=79

[tool.poetry]
name = "apgorm"
version = "0.1.0-a.0"
description = "A fully type-checked asynchronous ORM wrapped around asyncpg."
authors = ["Circuit"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TrigonDev/apgorm"
documentation = "https://github.com/TrigonDev/apgorm/wiki"
keywords = ["postgres", "postgresql", "asyncpg", "asyncio", "orm"]

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "^0.25.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
mypy = "^0.931"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
