[tool.black]
line-length=79
skip-magic-trailing-comma=true

[tool.poetry]
name = "apgorm"
version = "0.0.0"
description = "A fully type-checked asynchronous ORM wrapped around asyncpg."
authors = ["Circuit"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TrigonDev/apgorm"
repository = "https://github.com/TrigonDev/apgorm"
documentation = "https://github.com/TrigonDev/apgorm/wiki"
keywords = ["postgres", "postgresql", "asyncpg", "asyncio", "orm"]

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = ">=0.25,<0.28"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.1"
isort = "^5.9.3"
mypy = "^0.991"
flake8 = "^5.0.4"
pytest = "^7.0.0"
pytest-asyncio = "^0.20.2"
pytest-mock = "^3.6.1"
pytest-cov = "^4.0.0"
nox = "^2022.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
