[tool.black]
line-length=79
skip-magic-trailing-comma=true

[tool.poetry]
name = "apgorm"
version = "0.0.0"
description = "A fully type-checked asynchronous ORM wrapped around asyncpg."
authors = ["Circuit"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TrigonDev/apgorm"
repository = "https://github.com/TrigonDev/apgorm"
documentation = "https://github.com/TrigonDev/apgorm/wiki"
keywords = ["postgres", "postgresql", "asyncpg", "asyncio", "orm"]

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = ">=0.25,<0.30"
pydantic = ">=1.9,<3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^5.0.4"
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
nox = "^2023.4.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
